<resources>
    <string name="app_name">ChatApp</string>
    <string name="sign_in_img_content_description">Chat Icon</string>
    <string name="sign_in_google_icon">Google Icon</string>
    <string name="web_client_id">1018449371581-glclb867l27seio35u34et14nkj8n8fg.apps.googleusercontent.com</string>
    <string name="my_profile">My Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile_image_content_description">Profile Image</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="please_wait">Please Wait</string>
    <string name="no_conversation_available">No Conversation Available</string>
    <string name="send_request">Send request</string>
    <string name="search_connect">Connect</string>
    <string name="send_icon">Send Icon</string>
    <string name="default_notification_channel_id">chat_app_notification_channel_id</string>
    <string name="active_icon">Active Icon</string>
    <string name="type_a_message">Type a message</string>
    <string name="say_hi_to_start_a_conversation">Say Hi! to start a conversation</string>
    <string name="sign_in_with_google_and_start_chatting_right_away_choose_one_of_the_methods_below">Sign in with Google and start chatting right away. Choose one of the methods below.</string>
    <string name="conversation_location_icon">Location Icon</string>
    <string name="location_dialog_location_txt">Location</string>
    <string name="message_content_description">message_content_description</string>
    <string name="message_selected_image">Message Selected Image</string>
    <string name="main_chat">Chat</string>
    <string name="back_arrow_cd">Back Arrow</string>
    <string name="aa">Aa</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="chosen_image">Chosen Image</string>
    <string name="brush_button">Brush Button</string>
    <string name="save_button">Save Button</string>
    <string name="redo_button">Redo Button</string>
    <string name="undo_button">Undo Button</string>
    <string name="yellow_color">Yellow Color</string>
    <string name="black_color">Black Color</string>
    <string name="purple_color">Purple Color</string>
    <string name="red_color">Red Color</string>
    <string name="green_color">Green Color</string>
    <string name="blue_color">Blue Color</string>
    <string name="pink_color">Pink Color</string>
    <string name="white_color">White Color</string>
    <string name="edit">Edit</string>
    <string name="medium_brush">Medium Brush</string>
    <string name="large_brush_image">Large Brush Image</string>
    <string name="small_brush_image">Small Brush Image</string>
    <string name="mic_image">Mic Image</string>
    <string name="stop_button">stop button</string>
</resources>