<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity"
    android:background="@drawable/ic_background">
    <ImageView
        android:id="@+id/iv_chat_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_chat"
        android:contentDescription="@string/sign_in_img_content_description"
        app:layout_constraintVertical_bias="0.30"
        />
    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/marginNormalTop"
        android:layout_marginStart="@dimen/marginNormalStart"
        android:layout_marginEnd="@dimen/marginNormalEnd"
        android:text="@string/sign_in_with_google_and_start_chatting_right_away_choose_one_of_the_methods_below"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_chat_icon"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_google_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="50dp"
        android:layout_marginBottom="20dp"
        app:cardElevation="8dp"
        android:layout_marginTop="16dp"
        >
    <ImageView
        android:id="@+id/iv_google_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sign_in_google_icon"
        android:src="@drawable/ic_google"
         />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>