<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ConversationActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_conversation_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:cardBackgroundColor="@color/colorPrimaryDarkConversation"
        app:layout_constraintBottom_toTopOf="@id/view_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/ib_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:contentDescription="@string/back_arrow_cd"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_profile_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_profile_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/profile_image_content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/ib_back_button"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_profile" />

            <TextView
                android:id="@+id/tv_conversation_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/odor_mean_chey"
                android:textColor="@color/soft_black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/iv_profile_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <ImageView
                android:id="@+id/iv_active"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/active_icon"
                android:src="@drawable/ic_active"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@id/tv_conversation_title"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/ib_location"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:contentDescription="@string/conversation_location_icon"
                android:focusable="true"
                android:src="@drawable/ic_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_conversation_details"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/cl_bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider" />

    <TextView
        android:id="@+id/tv_say_hi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/say_hi_to_start_a_conversation"
        android:textColor="@color/soft_black"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/cl_bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_conversation_details"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/ib_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:contentDescription="@string/message_content_description"
            android:src="@drawable/ic_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/til_message" />

        <ImageButton
            android:id="@+id/ib_voice"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:contentDescription="@string/mic_image"
            android:src="@drawable/ic_voice"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/til_message"
            app:layout_constraintStart_toEndOf="@id/ib_image"
            app:layout_constraintTop_toTopOf="@id/til_message" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_recorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@id/til_message"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="100dp"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_recorder"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/ib_stop_record_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:contentDescription="@string/stop_button"
                    android:src="@drawable/ic_stop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Chronometer
                    android:id="@+id/chronometer_record_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:visibility="visible"
                    tools:text="1:00"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ib_stop_record_button"
                    app:layout_constraintEnd_toStartOf="@id/ib_cancel_selected_voice"
                    app:layout_constraintTop_toTopOf="parent"
                    android:padding="8dp"/>

                <ImageButton
                    android:id="@+id/ib_cancel_selected_voice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:contentDescription="@string/cancel_button"
                    android:src="@drawable/ic_cancel"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/chronometer_record_timer"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <ProgressBar
            android:id="@+id/pb_voice_loading"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/cv_recorder"
            app:layout_constraintStart_toEndOf="@id/cv_recorder"
            app:layout_constraintBottom_toBottomOf="@id/cv_recorder"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_message"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ib_send"
            app:layout_constraintStart_toEndOf="@id/ib_voice">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_til_type_a_message"
                android:hint="@string/type_a_message" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/ib_send"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:contentDescription="@string/send_icon"
            android:src="@drawable/ic_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/til_message" />

        <ImageView
            android:id="@+id/iv_message_image_selected"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/message_selected_image"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/til_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_image"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/ib_cancel_selected_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:contentDescription="@string/cancel_button"
            android:src="@drawable/ic_cancel_red"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="0.30"
            app:layout_constraintStart_toEndOf="@id/iv_message_image_selected"
            app:layout_constraintTop_toTopOf="@id/iv_message_image_selected"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/pb_image_uploading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@id/iv_message_image_selected"
            app:layout_constraintTop_toBottomOf="@id/ib_cancel_selected_image" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
