<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height= "?attr/actionBarSize"
        app:title="My Profile"
        app:titleTextColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="60dp"
        android:id="@+id/cv_profile_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/guideline_top_profile"
        app:layout_constraintStart_toStartOf="@id/guideline_start_profile"
        app:layout_constraintEnd_toEndOf="@id/guideline_end_profile"
        app:cardCornerRadius="20dp"
        android:elevation="2dp"
        app:strokeColor="@color/grey"
        app:strokeWidth="4dp"
        android:padding="20dp"
        >
        <ImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            tools:src="@drawable/ic_profile"
            android:contentDescription="@string/profile_image_content_description"
            android:background="@drawable/iv_background_border_oval"
            />

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginNormalTop"
        app:layout_constraintTop_toBottomOf="@id/cv_profile_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextInputLayoutStyle"
        android:layout_marginStart="@dimen/marginNormalStart"
        android:layout_marginEnd="@dimen/marginNormalEnd"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:ems="15"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_marginTop="@dimen/marginLargeTop"
        android:layout_marginStart="@dimen/marginNormalStart"
        android:layout_marginEnd="@dimen/marginNormalEnd"
        app:layout_constraintTop_toBottomOf="@id/til_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="5dp"
        android:textColor="@color/white"
        android:background="@drawable/background_sign_in_button"
        />




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>