<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end_own_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="271dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end_other_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="271dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_message_other"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:contentPadding="4dp"
        app:cardBackgroundColor="@color/colorMessageReceived"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_message_other"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_message_profile_image_other"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/profile_image_content_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageButton
                android:id="@+id/ib_play_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/conversation_location_icon"
                android:src="@drawable/ic_play_button_other"
                android:visibility="gone"
                tools:visibility="visible"
                android:backgroundTint="@color/colorMessageReceived"
                app:layout_constraintStart_toEndOf="@id/iv_message_profile_image_other"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.10"
                />
            <TextView
                android:id="@+id/tv_recording_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                app:layout_constraintStart_toEndOf="@id/ib_play_other"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"
                />

            <ImageView
                android:id="@+id/iv_location_other"
                android:layout_width="16dp"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="2dp"
                android:contentDescription="@string/conversation_location_icon"
                android:src="@drawable/ic_location"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/tv_message_body_other"
                app:layout_constraintTop_toTopOf="@id/tv_message_body_other" />

            <TextView
                android:id="@+id/tv_message_body_other"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/soft_black"
                android:fontFamily="@font/pt_sans_regular"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/iv_message_image_other"
                app:layout_constraintEnd_toStartOf="@id/tv_timestamp_other"
                app:layout_constraintStart_toEndOf="@+id/iv_message_profile_image_other"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Say Hi!" />

            <ImageView
                android:id="@+id/iv_message_image_other"
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:contentDescription="@string/message_content_description"
                android:layout_marginTop="18dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_message_body_other"
                tools:src="@drawable/ic_flower" />


            <TextView
                android:id="@+id/tv_timestamp_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/soft_black"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="11:00" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_message_own"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        app:contentPadding="4dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_message_own"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_location_own"
                android:layout_width="16dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/conversation_location_icon"
                android:src="@drawable/ic_location_dark"
                android:visibility="gone"
               app:layout_constraintEnd_toStartOf="@+id/tv_message_body_own"
                app:layout_constraintTop_toTopOf="@id/tv_message_body_own"
                />
            <ImageButton
                android:id="@+id/ib_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/conversation_location_icon"
                android:src="@drawable/ic_play_button"
                android:visibility="gone"
                tools:visibility="visible"
                android:backgroundTint="@color/colorAccent"
               app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.10"
                />
            <TextView
                android:id="@+id/tv_recording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/ib_play"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"
                tools:visibility="visible"
                />

            <TextView
                android:id="@+id/tv_message_body_own"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/white"
                android:fontFamily="@font/pt_sans_regular"
                android:textSize="16sp"
               android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@id/iv_message_image_own"
                app:layout_constraintEnd_toStartOf="@id/tv_timestamp_own"
               app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Say Hi!" />

            <ImageView
                android:id="@+id/iv_message_image_own"
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:contentDescription="@string/message_content_description"
                android:padding="4dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_message_body_own"
                tools:src="@drawable/ic_flower" />

            <TextView
                android:id="@+id/tv_timestamp_own"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="11:00" />
</androidx.constraintlayout.widget.ConstraintLayout></androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>